--- a/trunk/pioneers/ChangeLog
+++ b/trunk/pioneers/ChangeLog
@@ -1,5 +1,6 @@
 2020-06-27  Roland Clobus <rclobus@rclobus.nl>
 	* MinGW/README.txt: Updated building instructions.
+	* MinGW/Makefile.am: Added two more missing icons.
 
 2020-06-24  Roland Clobus <rclobus@rclobus.nl>
 	* MinGW/Makefile.am: Use the MKDIR_P and INSTALL_x macros.
