--- a/trunk/pioneers/ChangeLog
+++ b/trunk/pioneers/ChangeLog
@@ -1,3 +1,6 @@
+2020-08-02  Roland Clobus <rclobus@rclobus.nl>
+	* Makefile.am: Fixed 'make pristine'.
+
 2020-07-26  Roland Clobus <rclobus@rclobus.nl>
 	* common/game-list.c: Set pointer to NULL after free (SF bug 304).
 
