--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,5 +1,6 @@
 2020-08-02  Roland Clobus <rclobus@rclobus.nl>
 	* Makefile.am: Fixed 'make pristine'.
+	* Makefile.am: Fixed 'make distclean' when running with -j.
 
 2020-07-26  Roland Clobus <rclobus@rclobus.nl>
 	* common/game-list.c: Set pointer to NULL after free (SF bug 304).
