--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,6 +1,9 @@
 2020-08-02  Roland Clobus <rclobus@rclobus.nl>
 	* Makefile.am: Fixed 'make pristine'.
 	* Makefile.am: Fixed 'make distclean' when running with -j.
+	* client/ai/genetic.c, client/ai/genetic_core.c,
+	client/common/client.c, common/gtk/game-settings.c,
+	common/map_query.c, editor/gtk/editor.c: Apply 'make codespell'.
 
 2020-07-26  Roland Clobus <rclobus@rclobus.nl>
 	* common/game-list.c: Set pointer to NULL after free (SF bug 304).
