Apply 'make codespell' for a translatable string

--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -4,6 +4,8 @@
 	* client/ai/genetic.c, client/ai/genetic_core.c,
 	client/common/client.c, common/gtk/game-settings.c,
 	common/map_query.c, editor/gtk/editor.c: Apply 'make codespell'.
+	* client/ai/lobbybot.c, po/*: Apply 'make codespell' for a
+	translatable string.
 
 2020-07-26  Roland Clobus <rclobus@rclobus.nl>
 	* common/game-list.c: Set pointer to NULL after free (SF bug 304).
