--- a/trunk/pioneers/debian/changelog
+++ b/trunk/pioneers/debian/changelog
@@ -9,6 +9,7 @@ pioneers (15.6-1~local1) UNRELEASED; urgency=medium
     TODO: According to section 9.3.1,
     a systemd service unit should be included.
     If it has not been written yet, an init script is encouraged.
+  * Explicitly added CC-BY-SA-3.0 and 4.0 licenses in copyright.
 
  -- Roland Clobus <roland@silent.lan>  Wed, 14 Mar 2018 18:54:08 +0100
 
