--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -7,6 +7,8 @@
 	* client/ai/lobbybot.c, po/*: Apply 'make codespell' for a
 	translatable string.
 	* client/gtk/trade.c: Fixed translator comment.
+	* NEWS, client/ai/lobbybot.c: Prepare for the release of 15.6.
+	* docs/README.release: Prepare for the release of 15.6.
 
 2020-07-26  Roland Clobus <rclobus@rclobus.nl>
 	* common/game-list.c: Set pointer to NULL after free (SF bug 304).
