--- a/trunk/pioneers/ChangeLog
+++ b/trunk/pioneers/ChangeLog
@@ -1,4 +1,7 @@
 2020-08-02  Roland Clobus <rclobus@rclobus.nl>
+	* Released 15.6.
+
+2020-08-02  Roland Clobus <rclobus@rclobus.nl>
 	* Makefile.am: Fixed 'make pristine'.
 	* Makefile.am: Fixed 'make distclean' when running with -j.
 	* client/ai/genetic.c, client/ai/genetic_core.c,
