--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,4 +1,7 @@
 2020-08-02  Roland Clobus <rclobus@rclobus.nl>
+	* configure.ac: Work version is 15.7.
+
+2020-08-02  Roland Clobus <rclobus@rclobus.nl>
 	* Released 15.6.
 
 2020-08-02  Roland Clobus <rclobus@rclobus.nl>
