--- a/pioneers/debian/changelog
+++ b/pioneers/debian/changelog
@@ -1,13 +1,6 @@
-pioneers (15.7-1~local1) UNRELEASED; urgency=medium
+pioneers (15.6-1~local1) UNRELEASED; urgency=medium
 
-  * Waiting for new upstream release.
-  * Updated signature and watch file. 
-
- -- Roland Clobus <roland@silent.lan>  Sun, 02 Aug 2020 22:19:54 +0200
-
-pioneers (15.6-1) unstable; urgency=medium
-
-  * New upstream release.
+  * Waiting for a new release.
   * Replaced beep by libcanberra.
   * Fixed FTBFS for gcc-10. (closes: #957687)
   * The game uses the Gentium font.
@@ -20,7 +13,7 @@ pioneers (15.6-1) unstable; urgency=medium
   * Fixed Lintian warning file-contains-trailing-whitespace.
   * Pass-along all arguments to dh_auto_configure. (closes: #893586)
 
- -- Roland Clobus <rclobus@rclobus.nl>  Sun, 02 Aug 2020 15:39:59 +0200
+ -- Roland Clobus <roland@silent.lan>  Wed, 14 Mar 2018 18:54:08 +0100
 
 pioneers (15.5-1) unstable; urgency=medium
 
