--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,3 +1,7 @@
+2021-05-14  orbea <ovariegata@users.sourceforge.net>
+	* Makefile.am: Removed the hack from 2005-12-21. This makes Pioneers
+	build with slibtool (SF patch 680).
+
 2020-08-02  Roland Clobus <rclobus@rclobus.nl>
 	* configure.ac: Work version is 15.7.
 
