--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,3 +1,7 @@
+2021-05-14  Doug Miller <dooglius@users.sourceforge.net>
+	* server/default.game, server/5-6-player.game: Adjusted the sequence
+	of distributing the chits, which broke 2012-05-17 (SF bugs 310).
+
 2021-05-14  orbea <orbea@riseup.net>
 	* Makefile.am: Removed the hack from 2005-12-21. This makes Pioneers
 	build with slibtool (SF patch 680).
