--- a/trunk/pioneers/ChangeLog
+++ b/trunk/pioneers/ChangeLog
@@ -1,3 +1,9 @@
+2021-05-15  Roland Clobus <rclobus@rclobus.nl>
+	* client/gtk/legend.c, client/gtk/player.c,
+	client/gtk/resource-table.c, client/gtk/resource.c,
+	client/gtk/settingscreen.c, client/gtk/trade.c: Replaced
+	GTK_ALIGNMENT. Added indentation in the trade dialogs.
+
 2021-05-14  Doug Miller <dooglius@users.sourceforge.net>
 	* server/default.game, server/5-6-player.game: Adjusted the sequence
 	of distributing the chits, which broke 2012-05-17 (SF bugs 310).
