--- a/trunk/pioneers/ChangeLog
+++ b/trunk/pioneers/ChangeLog
@@ -1,3 +1,7 @@
+2021-05-16  Roland Clobus <rclobus@rclobus.nl>
+	* client/ai/ai.c, configure.ac, metaserver/main.c, server/main.c:
+	g_type_init is deprecated since glib 2.36.
+
 2021-05-15  Roland Clobus <rclobus@rclobus.nl>
 	* client/gtk/legend.c, client/gtk/player.c,
 	client/gtk/resource-table.c, client/gtk/resource.c,
