--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,6 +1,7 @@
 2021-07-07  Roland CLobus <rclobus@rclobus.nl>
 	* client/gtk/connect.c: Use g_strlcpy to prevent a potentially
 	non-terminated string.
+	* common/gtk/common_gtk.c: Replaced deprecated functions.
 
 2021-05-16  Roland Clobus <rclobus@rclobus.nl>
 	* client/ai/ai.c, configure.ac, metaserver/main.c, server/main.c:
