Ensure that the avatar is shown when the dialog is opened

--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -4,6 +4,8 @@
 	* common/gtk/common_gtk.c: Replaced deprecated functions.
 	* client/gtk/quote.c, client/gtk/trade.c: Replaced deprecated function
 	gtk_scrolled_window_add_with_viewport.
+	* client/gtk/name.c: Ensure that the avatar is shown when the dialog
+	is opened.
 
 2021-05-16  Roland Clobus <rclobus@rclobus.nl>
 	* client/ai/ai.c, configure.ac, metaserver/main.c, server/main.c:
